# picflashrom

./: .gitignore  readme.md
bootloader/: Readme Usage Notes for Bootloader with XC8.txt
bootloader/MPLAB.X/nbproject/: Makefile-PIC18F14K50_XC8.mk  Makefile-PIC18F25K50_XC8.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  Package-PIC18F25K50_XC8.bash  configurations.xml  project.xml
bootloader/src/: HardwareProfile.h  main.c  usb_descriptors.c
firmware/MPLAB.X/html/: MPLAB.X.production.as.html  MPLAB.X.production.cgen.html  adc.c.html  adc.c_first_stage.html  adc.cpp.html  adc.p1.html  adc.parser.html  adc.pre.html  app_device_custom_hid.c.html  app_device_custom_hid.c_first_stage.html  app_device_custom_hid.cpp.html  app_device_custom_hid.p1.html  app_device_custom_hid.parser.html  app_device_custom_hid.pre.html  app_led_usb_status.c.html  app_led_usb_status.c_first_stage.html  app_led_usb_status.cpp.html  app_led_usb_status.p1.html  app_led_usb_status.parser.html  assem_stage.html  (+97 more)
firmware/src/: amd_rom.c  app_usb.c  app_usb.h  command.c  command.h  genesis.c  i2c.c  i2c.h  js_rom.c  main.c  mcp23s17.c  mcp23s17.h  rom.c  rom.config.h  rom.h  rom.inl.h  rom16.c  rom8.c  snes.c  spi.c  spi.h  system_config.h
schematics/: 25k50_v0.sch
tool/: CMakeLists.txt  ccrwrom.sln  ccrwrom.vcxproj  ccrwrom.vcxproj.filters  readme.md
tool/src/: Command.cpp  Command.h  ccrwrom.h  debug.cpp  debug.h  main.cpp  rom.cpp  rom_tools.cpp  rom_tools.h  romdb.cpp  romdb.h  test.cpp  usb.cpp  usb.h
tool/src/console/: cart.cpp  cart.h  snes.cpp  snes.h
(+23 files in other folders)
